No more today....

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Demo One Backend",
   "main": "src/index.js",
   "private": true,
+  "type":"module",
   "scripts": {
     "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
