--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Demo One Backend",
   "main": "src/index.js",
   "private": true,
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "start": "node ./src/index.js",
+    "babel": "babel src/index.ts --out-file dist/bundle.js",
+    "start": "node ./dist/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,18 @@
   },
   "homepage": "https://github.com/bymoer/DemOneBack#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "@babel/preset-react": "^7.18.6",
+    "@tsconfig/recommended": "^1.0.2",
+    "@types/express": "^4.17.17",
+    "express": "^4.18.2",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.0",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0"
   }
 }
