--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
-      ["@babel/preset-modules", {}],
+      ["@babel/preset-modules", {"modules": false, "targets": { "node": true }}],
       ["@babel/preset-react", {
           "runtime": "automatic"
       }],
