--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "babel": "babel src/index.ts --out-file dist/bundle.js",
-    "start": "node ./dist/bundle.js",
+    "babel": "npx rimraf dist/* && npx babel --extensions .ts,.tsx src --out-dir dist",
+    "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
