--- a/package.json
+++ b/package.json
@@ -26,8 +26,16 @@
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
     "@tsconfig/recommended": "^1.0.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-session": "^2.0.44",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
     "typescript": "^4.9.5"
